# shannon-prime-system-engine

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  HISTORY.md  LICENSE  MORNING-STATUS.md  README.md  START-HERE-prefill-stall.md  _b3_admission.bat  _b3_boulter.txt  _b3_corpus_capture.bat  _b3_label_persec.bat  _b3_qdump_launch.bat  _b3_wc_serve.bat  _b3v9_launch.bat  _b3v9_rebuild.bat  _b3v9b_launch.bat  _build_ppl_vs22.bat  _bx_islands_legA.bat  _bx_islands_legB.bat  _curator_build.bat  _curator_gate.bat  _deployeval.py  _dispA_launch.bat  _dispAfull_launch.bat  _dispC_launch.bat  _dispN3.bat  _dispN4.bat  _dispN_launch.bat  _dispV12_launch.bat  _disp_build.bat  _disp_launch.bat  _judge_serve.bat  _n5c_v2_measure.bat  _n5c_val.bat  _n5c_wcache_gate.bat  _needle1.txt  (+57 more)
src/: CMakeLists.txt
src/backends/cpu/: cpu_forward.c  cpu_gemma3.c  cpu_generate.c  cpu_overlay.c  ring2_arm_backend.c  ring2_disk.c
src/backends/cuda/: cuda_backend.cu  cuda_forward.cu  cuda_gemma3.cu  ptx_bench.cu  ptx_hash.cuh  ptx_mma.cuh  ptx_mma_tile_bench.cu  ptx_mma_tile_common.cuh  ptx_mma_tile_int4.cuh  ptx_mma_tile_int8.cuh  ptx_mma_tile_validate.cu  ptx_ntt.cuh  ptx_spinor.cuh  ptx_validate.cu
src/backends/hexagon/: CMakeLists.txt  rpcmem_probe.c  sp_hex_host.c  sp_hex_layout.h  sp_hex_rt.c
src/backends/vulkan/: vk_common.h  vulkan_backend.cpp  vulkan_forward.cpp
src/common/: sp_error.c
src/forward/: arena.c  forward.c  kernels.c  model.c  ppl.c
src/io/: sp_hash.c  sp_hash.h  sp_model_adapter.c  sp_model_load.c
src/loader/: gguf.c
src/tokenizer/: gemma4_bpe.c  tokenizer.c  tokenizer_internal.h  unicode_ranges.h
tests/: .gitignore  CMakeLists.txt  bench_avx512.c  bench_avx_spinor_sweep.c  bench_gemv_int8.cu  bench_sieve_hw.c  niah.c  ppl_ar.c  sp_toks.c  test_arena.c  test_avx.c  test_avx512.c  test_avx512_persist.c  test_avx512_zen4_mock.c  test_compose.c  test_cuda_smoke.c  test_dg_forward_timing.c  test_dg_sample.c  test_diffgemma_forward.c  test_diffgemma_load.c  test_diffjudge_denoise.c  test_diffjudge_native.c  test_forward.c  test_frob.c  test_g4_tokenizer.c  test_gemma3_bind.c  test_gemma3_cuda.c  test_gemma3_forward.c  test_gemma3_vulkan.c  test_gemma4_cuda.c  test_gemma4_ppl.c  test_gemma4_ppl_cuda.c  test_gen_kv.c  test_generate.c  test_hex_fwd.c  test_kste_kv.c  test_kste_kv_cuda.c  test_kste_kv_vulkan.c  test_kv_spinor.c  test_loader.c  (+19 more)
tests/fixtures/chat_fullstack/: G-INT-2-PHASE-A-AUDIT.md  _b2_gate.ps1  _b2_ladder.ps1  _b2_rungate.bat  _b6_all_eval_00_NO_OP.json  _b6_all_eval_01_ACTION.json  _b6_all_eval_02_NO_OP.json  _b6_all_eval_03_ACTION.json  _b6_all_eval_04_NO_OP.json  _b6_all_eval_05_NO_OP.json  _b6_all_eval_06_ACTION.json  _b6_all_eval_07_ACTION.json  _b6_audioA_action.json  _b6_audioA_none.json  _b6_audioA_noop.json  _b6_audioB_none.json  _b6_chat.ps1  _b6_memB_none.json  _b6_memB_open_none.json  _b6_memB_open_replay.json  _b6_memB_replay.json  _bx_off_long.out  _bxfast_ref1.out  _bxfast_ref2.out  _bxfinal_new1.out  _bxfinal_new2.out  _growth_q39.out  _growth_recall_on.out  _growth_recall_on_4k.out  _q36_multiturn.out  _q36_paris_a.out  _q36_paris_b.out  b2_postreplay.txt  recall_registry.jsonl  reg2.jsonl  reg4.jsonl  reg5.jsonl  reg6.jsonl  reg_all.jsonl  reg_needle.jsonl  (+3 more)
tests/fixtures/faithful/: G-FAITHFUL-BASELINE.json  G-FAITHFUL-RECALL-JACCARD.json  G-FAITHFUL-RECALL-WC.json  G-LN-F3a-SELECTOR-DATASET.manifest
tests/fixtures/g4tok/: wiki24k.ids.txt  wiki24k.txt
tests/fixtures/kai2/: STATUS
tests/fixtures/ppl/: .gitignore  wiki.tiny.g4tokens.txt  wiki.tiny.oracle_ppl.txt  wiki.tiny.raw  wiki.valid.g4tokens.txt  wiki.valid.raw
tests/fixtures/spm/: p1.ids  p2.ids  p2.txt  p3.ids  p3.txt  p4.ids  p4.txt  p5.ids  p5.txt
tests/fixtures/xbar_c2/: registry.jsonl  registry_bits.jsonl
tests/perf/: GATEWAY-PREFILL-STALL.md  SESSION-PERF-SYNTHESIS-2026-06-23.md  _g_bigprompt_probe.py  _g_chat_timing.py  _g_faithful_baseline.py  _g_faithful_recall.py  _g_faithful_recall_l5bx.json  _g_faithful_recall_l5rr2.json  _g_faithful_recall_l5scaled.json  _g_faithful_recall_l5se.json  _g_faithful_recall_l5v2.json  _g_memory_check.py  _g_niah_daemon.py  _g_niah_natural.py  _g_persist_kv_gate.py  _g_persist_kv_parity.py  _g_recall_check.py  _g_rewind_audit.py  _persist_gate_compare.py  _persist_gate_def.json  _persist_gate_off.json  _persist_gate_on.json  _persist_recall_serve.bat  _persist_serve.bat
tools/eagle/: CMakeLists.txt  CONTRACT-EAGLE-FLYWHEEL.md  corpus.txt  make_corpus.py  sp_eagle_fwd.c  sp_eagle_fwd_cuda.cu  sp_eagle_ref.py  sp_eagle_train.py
tools/eagle/_ab_receipts/: baseline.txt  finetuned.txt  finetuned_fastdraft.txt  heldout_baseline.txt  heldout_finetuned.txt  plain_decode_k0.txt  profile_after_suppressfix.txt
tools/sp_compute_skel/: .gitignore  CMakeLists.txt  build.cmd
tools/sp_compute_skel/docs/: CLOSURE-CHAT-INTEGRATION.md  CLOSURE-HX-3b.md  (+65 more)
tools/sp_daemon/: Cargo.toml  README.md  WIRE-CUDA-DECODE-GEMMA4.md  _eagle_remeasure.bat  _faithful_serve_l5cap.bat  _hard_act_ood_cap.bat  _hard_act_train_cap.bat  _hard_ood_cap.bat  _hard_route_ood_cap.bat  _hard_route_train_cap.bat  _hard_train_cap.bat  _run_telwire.bat  build-android-hex-backend.bat  build-android-libs.bat  build-android.bat  build-host-cpu-backend.bat  build-host-cuda-backend.bat  build-host-vulkan-backend.bat  build.rs
tools/sp_dsp_smoke/: Cargo.toml  SP-MODEL-Q4B-RECONCILIATION.md  build.rs  sprint_i_run_output.txt  sprint_j_run_output.txt  sprint_k_alpha_run_output.txt  sprint_k_beta_2_5a_run_output.txt  sprint_k_beta_2_5b_dual_run_output.txt  sprint_k_beta_2_5b_oracle_run_output.txt  sprint_k_beta_2_5c_dual_run_output.txt  sprint_k_beta_2_5c_smoke_run_output.txt  sprint_ntt_1_run_output.txt  sprint_ntt_3_run_output.txt
tools/sp_echo_skel/: CMakeLists.txt  build.cmd
tools/sp_npu_spike/: Cargo.toml  build.rs
tools/sp_swarm/: .gitignore  Cargo.toml  g_c2_semantic.py  gen_fixture.py
tools/sp_tok_dump/: CMakeLists.txt  sp_tok_dump.c  sp_tok_enc.c
tools/sp_transcode/: CMakeLists.txt  sp_transcode.c
tools/sp_trick1/: Cargo.toml
(+592 files in other folders)
